more small fixes and comments